crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__arr_compspec.snap
---
source: crates/jrsonnet-rowan-parser/src/tests.rs
expression: "[a for a in [1, 2, 3]]\n"
---
SOURCE_FILE@0..23
  EXPR@0..22
    EXPR_ARRAY_COMP@0..22
      L_BRACK@0..1 "["
      EXPR@1..2
        EXPR_VAR@1..2
          NAME@1..2
            IDENT@1..2 "a"
      WHITESPACE@2..3 " "
      FOR_SPEC@3..21
        FOR_KW@3..6 "for"
        WHITESPACE@6..7 " "
        DESTRUCT_FULL@7..8
          NAME@7..8
            IDENT@7..8 "a"
        WHITESPACE@8..9 " "
        IN_KW@9..11 "in"
        WHITESPACE@11..12 " "
        EXPR@12..21
          EXPR_ARRAY@12..21
            L_BRACK@12..13 "["
            EXPR@13..14
              EXPR_NUMBER@13..14
                FLOAT@13..14 "1"
            COMMA@14..15 ","
            WHITESPACE@15..16 " "
            EXPR@16..17
              EXPR_NUMBER@16..17
                FLOAT@16..17 "2"
            COMMA@17..18 ","
            WHITESPACE@18..19 " "
            EXPR@19..20
              EXPR_NUMBER@19..20
                FLOAT@19..20 "3"
            R_BRACK@20..21 "]"
      R_BRACK@21..22 "]"
  WHITESPACE@22..23 "\n"
