crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__arr_compspec_incompatible_with_multiple_elems_w.snap
---
source: crates/jrsonnet-rowan-parser/src/tests.rs
expression: "[a, b, for a in [1, 2, 3], c]\n"
---
SOURCE_FILE@0..30
  EXPR@0..29
    EXPR_ARRAY@0..29
      L_BRACK@0..1 "["
      EXPR@1..2
        EXPR_VAR@1..2
          NAME@1..2
            IDENT@1..2 "a"
      COMMA@2..3 ","
      WHITESPACE@3..4 " "
      EXPR@4..5
        EXPR_VAR@4..5
          NAME@4..5
            IDENT@4..5 "b"
      COMMA@5..6 ","
      WHITESPACE@6..7 " "
      ERROR_CUSTOM@7..25
        FOR_SPEC@7..25
          FOR_KW@7..10 "for"
          WHITESPACE@10..11 " "
          DESTRUCT_FULL@11..12
            NAME@11..12
              IDENT@11..12 "a"
          WHITESPACE@12..13 " "
          IN_KW@13..15 "in"
          WHITESPACE@15..16 " "
          EXPR@16..25
            EXPR_ARRAY@16..25
              L_BRACK@16..17 "["
              EXPR@17..18
                EXPR_NUMBER@17..18
                  FLOAT@17..18 "1"
              COMMA@18..19 ","
              WHITESPACE@19..20 " "
              EXPR@20..21
                EXPR_NUMBER@20..21
                  FLOAT@20..21 "2"
              COMMA@21..22 ","
              WHITESPACE@22..23 " "
              EXPR@23..24
                EXPR_NUMBER@23..24
                  FLOAT@23..24 "3"
              R_BRACK@24..25 "]"
      COMMA@25..26 ","
      WHITESPACE@26..27 " "
      EXPR@27..28
        EXPR_VAR@27..28
          NAME@27..28
            IDENT@27..28 "c"
      R_BRACK@28..29 "]"
  WHITESPACE@29..30 "\n"
===
LocatedSyntaxError { error: Custom { error: "compspec may only be used if there is only one array element" }, range: 7..25 }
===
   ·        ╭──────────────────── compspec may only be used if there is only one array element
1  │ [a, b, for a in [1, 2, 3], c]
