crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__array_comp_incompatible_with_multiple_elems.snap
---
source: crates/jrsonnet-rowan-parser/src/lib.rs
assertion_line: 88
expression: "[a for a in [1, 2, 3], b]\n"

---
Root@0..26
  Array@0..26
    SymbolLeftBracket@0..1 "["
    ArrayElem@1..21
      BodyDef@1..3
        Ident@1..3
          Ident@1..2 "a"
          Whitespace@2..3 " "
      CompspecFor@3..21
        KeywordFor@3..6 "for"
        Whitespace@6..7 " "
        Ident@7..8 "a"
        Whitespace@8..9 " "
        OpIn@9..11 "in"
        Whitespace@11..12 " "
        Array@12..21
          SymbolLeftBracket@12..13 "["
          ArrayElem@13..14
            BodyDef@13..14
              Literal@13..14
                Number@13..14 "1"
          SymbolComma@14..15 ","
          Whitespace@15..16 " "
          ArrayElem@16..17
            BodyDef@16..17
              Literal@16..17
                Number@16..17 "2"
          SymbolComma@17..18 ","
          Whitespace@18..19 " "
          ArrayElem@19..20
            BodyDef@19..20
              Literal@19..20
                Number@19..20 "3"
          SymbolRightBracket@20..21 "]"
    SymbolComma@21..22 ","
    Whitespace@22..23 " "
    ArrayElem@23..24
      BodyDef@23..24
        Ident@23..24
          Ident@23..24 "b"
    SymbolRightBracket@24..25 "]"
    Whitespace@25..26 "\n"
===
Custom { error: "compspec may only be used if there is only one array element", range: 3..21 }
===
  [38;2;255;30;30m×[0m syntax error
   ╭────
 [2m1[0m │ [a for a in [1, 2, 3], b]
   · [38;2;246;87;248m   ─────────┬────────[0m
   ·             [38;2;246;87;248m╰── [38;2;246;87;248mcompspec may only be used if there is only one array element[0m[0m
   ╰────

