crates/jrsonnet-rowan-parser/src/snapshots/jrsonnet_rowan_parser__tests__function.snap
---
source: crates/jrsonnet-rowan-parser/src/tests.rs
expression: "function(a, b = 1) a + b\n"
---
SOURCE_FILE@0..25
  EXPR@0..24
    EXPR_FUNCTION@0..24
      FUNCTION_KW@0..8 "function"
      PARAMS_DESC@8..18
        L_PAREN@8..9 "("
        PARAM@9..10
          DESTRUCT_FULL@9..10
            NAME@9..10
              IDENT@9..10 "a"
        COMMA@10..11 ","
        WHITESPACE@11..12 " "
        PARAM@12..17
          DESTRUCT_FULL@12..13
            NAME@12..13
              IDENT@12..13 "b"
          WHITESPACE@13..14 " "
          ASSIGN@14..15 "="
          WHITESPACE@15..16 " "
          EXPR@16..17
            EXPR_NUMBER@16..17
              FLOAT@16..17 "1"
        R_PAREN@17..18 ")"
      WHITESPACE@18..19 " "
      EXPR@19..24
        EXPR_BINARY@19..24
          EXPR@19..20
            EXPR_VAR@19..20
              NAME@19..20
                IDENT@19..20 "a"
          WHITESPACE@20..21 " "
          PLUS@21..22 "+"
          WHITESPACE@22..23 " "
          EXPR@23..24
            EXPR_VAR@23..24
              NAME@23..24
                IDENT@23..24 "b"
  WHITESPACE@24..25 "\n"
